detail index css Modified

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -390,7 +390,7 @@
           <div class="col-12" style="width: 95%; margin: 0 auto">
             <div class="row">
               <div class="col-2 userImgArea">
-                <img src="${writerImage}" />
+                <img src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png" />
               </div>
               <div class="col-10 userNameArea">이름</div>
             </div>
@@ -405,147 +405,8 @@
           />
           <div class="col-12 userCommentArea" style="border: 1px solid black">
             <p>
-              방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+              test
             </p>
-          </div>
-        </div>
-        <!-- 여기서부터 방명록 코드 반복 끝-->
-        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px">
-          <!-- 여기서부터 방명록 코드 반복시작-->
-          <div class="row" style="margin-top: 10px">
-            <div class="col-12" style="width: 95%; margin: 0 auto">
-              <div class="row">
-                <div class="col-2 userImgArea"></div>
-                <div class="col-10 userNameArea">이름</div>
-              </div>
-            </div>
-            <hr
-              style="
-                width: 95%;
-                margin: 0 auto;
-                margin-top: 20px;
-                margin-bottom: 20px;
-              "
-            />
-            <div class="col-12 userCommentArea" style="border: 1px solid black">
-              <p>
-                방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz
-              </p>
-            </div>
-          </div>
-        </div>
-        <!-- 여기서부터 방명록 코드 반복 끝-->
-        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px">
-          <!-- 여기서부터 방명록 코드 반복시작-->
-          <div class="row" style="margin-top: 10px">
-            <div class="col-12" style="width: 95%; margin: 0 auto">
-              <div class="row">
-                <div class="col-2 userImgArea"></div>
-                <div class="col-10 userNameArea">이름</div>
-              </div>
-            </div>
-            <hr
-              style="
-                width: 95%;
-                margin: 0 auto;
-                margin-top: 20px;
-                margin-bottom: 20px;
-              "
-            />
-            <div class="col-12 userCommentArea" style="border: 1px solid black">
-              <p>
-                방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz
-              </p>
-            </div>
           </div>
         </div>
         <!-- 여기서부터 방명록 코드 반복 끝-->
