--- a/templates/index.html
+++ b/templates/index.html
@@ -200,73 +200,37 @@
     <div id="profile-box" class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card">
-          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">이름</h5>
-            <p class="card-text">기수 : 14기</p>
-            <p class="card-text">직무 : Spring백엔드 개발자</p>
-            <p class="card-text">블로그 : Spring백엔드 개발자</p>
-            <p class="card-text">MBTI : ISFJ</p>
+            <h5 class="card-title">test</h5>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
-          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">이름</h5>
-            <p class="card-text">기수 : 14기</p>
-            <p class="card-text">직무 : Spring백엔드 개발자</p>
-            <p class="card-text">블로그 : Spring백엔드 개발자</p>
-            <p class="card-text">MBTI : ISFJ</p>
+            <h5 class="card-title">test</h5>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
-          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">이름</h5>
-            <p class="card-text">기수 : 14기</p>
-            <p class="card-text">직무 : Spring백엔드 개발자</p>
-            <p class="card-text">블로그 : Spring백엔드 개발자</p>
-            <p class="card-text">MBTI : ISFJ</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">이름</h5>
-            <p class="card-text">기수 : 14기</p>
-            <p class="card-text">직무 : Spring백엔드 개발자</p>
-            <p class="card-text">블로그 : Spring백엔드 개발자</p>
-            <p class="card-text">MBTI : ISFJ</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">이름</h5>
-            <p class="card-text">기수 : 14기</p>
-            <p class="card-text">직무 : Spring백엔드 개발자</p>
-            <p class="card-text">블로그 : Spring백엔드 개발자</p>
-            <p class="card-text">MBTI : ISFJ</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">이름</h5>
-            <p class="card-text">기수 : 14기</p>
-            <p class="card-text">직무 : Spring백엔드 개발자</p>
-            <p class="card-text">블로그 : Spring백엔드 개발자</p>
-            <p class="card-text">MBTI : ISFJ</p>
+            <h5 class="card-title">test</h5>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
+            <p class="card-text">test</p>
           </div>
         </div>
       </div>
