--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,13 @@
     .cards {
       margin: 50px;
     }
+    /* .card{
+      min-height: 500px;
+    } */
+    .card>img{
+      height: 20rem;
+      object-fit: cover;
+    }
 
     .card>img {
       object-fit: cover;
