--- a/templates/revise.html
+++ b/templates/revise.html
@@ -177,9 +177,9 @@
             <div class="col-12">
               <label for="input" class="form-label">field</label>
               <select id="field" class="form-select">
-                <option selected>{{field}}</option>
-                <option>Frontend</option>
-                <option>Backend</option>
+                <option value="default" selected disabled hidden>{{field}}</option>
+                <option value="1">Frontend</option>
+                <option value="2">Backend</option>
               </select>
             </div>
             <div class="col-12">
@@ -197,7 +197,7 @@
             <div class="col-md-4">
               <label for="input" class="form-label">MBTI</label>
               <select id="MBTI" class="form-select">
-                <option selected>MBTI...</option>
+                <option value="default" selected disabled hidden>{{mbti}}</option>
                 <option>ISTJ</option>
                 <option>INTJ</option>
                 <option>ESTJ</option>
