--- a/templates/register.html
+++ b/templates/register.html
@@ -57,13 +57,13 @@
     $(document).ready(function () {
       valid().then((response) => {
         userid = response['result']['id']
-        console.log(userid)
+        // console.log(userid)
 
-        if (response['result']['id'] != undefined) {
-          profile_check(response['result']['id'])
-        } else { //비로그인 유저는 페이지 접속 불가
-          window.location.href = '/'
-        }
+        // if (response['result']['id'] != undefined){
+        //   profile_check(response['result']['id'])
+        // } else { //비로그인 유저는 페이지 접속 불가
+        //   window.location.href = '/'
+        // }
       });
     });
 
@@ -119,7 +119,7 @@
       })
     }
 
-    function save_profile() {
+    async function save_profile() {
       if (!img_uploaded) {
         base64 = document.getElementById("preview").getAttribute("src")
       }
@@ -130,33 +130,25 @@
       let email = $('#email').val()
       let MBTI = $('#MBTI').val()
       let image = base64
-      // if(name=="") {
-      //   alert("이름을 입력해주세요.");
-      //   return;
-      // }
-      // if(field=="") {
-      //   alert("직무를 선택해주세요.");   // 작동안함..
-      //   return;
-      // }
-      // if(email=="") {
-      //   alert("이메일을 입력해주세요."); // 이름, 이메일은 작동함 but 이름 입력 안하면 입력해주세요 메세지창 뜬 후 기존 데이터도 사라짐
-      //   return;
-      // }
 
-      let formData = new FormData();
-      formData.append("name_give", name);
-      formData.append("field_give", field);
-      formData.append("github_give", github);
-      formData.append("blog_give", blog);
-      formData.append("email_give", email);
-      formData.append("MBTI_give", MBTI);
-      formData.append("userid_give", userid);
-      formData.append("image_give", image);
-
-      fetch('/profile', { method: "POST", body: formData }).then((res) => res.json()).then((data) => {
-        alert(data['msg']);
-        window.location.href = "/";
-      });
+      const response = await fetch("/profile", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          name_give: name,
+          field_give: field,
+          github_give: github,
+          blog_give: blog,
+          email_give: email,
+          MBTI_give: MBTI,
+          userid_give: userid,
+          image_give: image
+        }),
+      })
+      console.log("----------------------------------------")
+      alert(response)
 
     }
   </script>
@@ -185,7 +177,7 @@
           </form>
         </div>
         <div class="form row col-6">
-          <form class="row g-3">
+          <div class="row g-3">
             <legend>프로필 등록하기</legend>
             <div class="col-12">
               <label for="inputEmail4" class="form-label">name</label>
@@ -234,10 +226,10 @@
               </select>
             </div>
             <div class="col-12">
-              <button onclick="save_profile()" type="submit" class="btn btn-primary">등록</button>
+              <button onclick="save_profile()" class="btn btn-primary">등록</button>
               <button onclick="location.href='/'" type="button" class="btn btn-primary">다음에 등록</button>
             </div>
-          </form>
+          </div>
         </div>
       </div>
     </div>
