--- a/templates/detail.html
+++ b/templates/detail.html
@@ -240,7 +240,7 @@
                     console.log(rows);
                     rows.forEach((e) => {
                         let temp_html = "";
-                        
+                        let commentId = e['_id']; // 방명록의 고유 아이디 -> 이걸 이용해서 삭제할거임
                         let writerProfileId = e["writerId"];
                         fetch("/writerProfile/" + writerProfileId)
                             .then((res) => res.json())
@@ -250,37 +250,57 @@
                                 writerImage = data["result"]["image"];
                                 commentText = e["commentText"];
                                 temp_html = `
-                                <div class="col-12" style="margin-top: 10px; margin-bottom: 10px; border:1px solid white; border-radius: 30px; box-shadow:2px 3px 4px 0px gray">
-        <!-- 여기서부터 방명록 코드 반복시작-->
-        <div class="row" style="margin-top: 10px; ">
-          <div class="col-12" style="width: 95%; margin: 0 auto">
-            <div class="row">
-              <div class="col-2 userImgArea">
-                <img src="${writerImage}"/>
-                </div>
-              <div class="col-10 userNameArea">${writerName}</div>
-            </div>
-          </div>
-          <hr
-            style="
-              width: 95%;
-              margin: 0 auto;
-              margin-top: 20px;
-              margin-bottom: 20px;
-            "
-          />
-          <div class="col-12 userCommentArea">
-            <p>${commentText}
-            </p>
-          </div>
-        </div>
-      </div>`;
+                                <div class="col-12" style="margin-top: 10px; margin-bottom: 10px; border:1px solid white; border-radius: 30px; box-shadow:2px 3px 4px 0px">
+                                  <!-- 여기서부터 방명록 코드 반복시작-->
+                                  <div class="row" style="margin-top: 10px; ">
+                                    <div class="col-12" style="width: 95%; margin: 0 auto">
+                                      <div class="row">
+                                        <div class="col-2 userImgArea">
+                                          <img src="${writerImage}"/>
+                                          </div>
+                                          <span id="commentId" style="display:none;">${commentId}</span>
+                                        <div class="col-10 userNameArea">${writerName}</div>
+                                      </div>
+                                    </div>
+                                    <hr
+                                      style="
+                                        width: 95%;
+                                        margin: 0 auto;
+                                        margin-top: 20px;
+                                        margin-bottom: 20px;
+                                      "
+                                    />
+                                    <div class="col-12 userCommentArea">
+                                      <p>${commentText}
+                                      </p>
+                                      <button
+                                        type="button"
+                                        class="btn btn-outline-danger"
+                                        onClick="delete_comment()"
+                                      >
+                                        글삭제
+                                      </button>
+                                    </div>
+                                  </div>
+                                </div>`;
                     $("#commentsArea").append(temp_html);
                   }
                 });
             });
           });
       }
+
+      function delete_comment() {
+        let formData = new FormData();
+        let commentId = $('#commentId').text();
+        formData.append("commentId_give",commentId);
+        fetch('/comment/delete', { method:"DELETE", body:formData }).then((res)=>res.json())
+        .then((data)=>{
+          alert(data['msg']);
+          window.location.reload()
+        })
+      }
+
     </script>
   </head>
 
@@ -390,7 +410,7 @@
           <div class="col-12" style="width: 95%; margin: 0 auto">
             <div class="row">
               <div class="col-2 userImgArea">
-                <img src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png" />
+                <img src="${writerImage}" />
               </div>
               <div class="col-10 userNameArea">이름</div>
             </div>
@@ -405,8 +425,147 @@
           />
           <div class="col-12 userCommentArea" style="border: 1px solid black">
             <p>
-              test
+              방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+              글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+              abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+              가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
             </p>
+          </div>
+        </div>
+        <!-- 여기서부터 방명록 코드 반복 끝-->
+        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px">
+          <!-- 여기서부터 방명록 코드 반복시작-->
+          <div class="row" style="margin-top: 10px">
+            <div class="col-12" style="width: 95%; margin: 0 auto">
+              <div class="row">
+                <div class="col-2 userImgArea"></div>
+                <div class="col-10 userNameArea">이름</div>
+              </div>
+            </div>
+            <hr
+              style="
+                width: 95%;
+                margin: 0 auto;
+                margin-top: 20px;
+                margin-bottom: 20px;
+              "
+            />
+            <div class="col-12 userCommentArea" style="border: 1px solid black">
+              <p>
+                방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- 여기서부터 방명록 코드 반복 끝-->
+        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px">
+          <!-- 여기서부터 방명록 코드 반복시작-->
+          <div class="row" style="margin-top: 10px">
+            <div class="col-12" style="width: 95%; margin: 0 auto">
+              <div class="row">
+                <div class="col-2 userImgArea"></div>
+                <div class="col-10 userNameArea">이름</div>
+              </div>
+            </div>
+            <hr
+              style="
+                width: 95%;
+                margin: 0 auto;
+                margin-top: 20px;
+                margin-bottom: 20px;
+              "
+            />
+            <div class="col-12 userCommentArea" style="border: 1px solid black">
+              <p>
+                방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
+                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
+                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
+                abcdefghijklmnopqrstuvwxyz
+              </p>
+            </div>
           </div>
         </div>
         <!-- 여기서부터 방명록 코드 반복 끝-->
