--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>프로필</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,6 +28,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="icon" href="/static/images/favicon.png">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
       * {
@@ -141,9 +142,11 @@
         /* 방명록 작성자 방명록영역 관련 css */
         width: 95%;
         margin: 0 auto;
+        margin-bottom: 20px;
         max-height: 150px;
         overflow: scroll;
       }
+
 
       .userCommentArea::-webkit-scrollbar {
         display: none;
@@ -271,8 +274,7 @@
                                       <button
                                         type="button"
                                         class="btn btn-outline-danger"
-                                        onClick="delete_comment()"
-                                      >
+                                        onClick="delete_comment()" style="float: right">
                                         글삭제
                                       </button>
                                     </div>
@@ -379,29 +381,18 @@
     <div class="row main3">
       <!-- 본인 프로필 영역 시작 -->
       <div class="col-12">
-        <p><i class="fa-solid fa-laptop-code"></i>{{field}}</p>
+        <p><i class="fa-solid fa-laptop-code"></i>&nbsp;&nbsp;{{field}}</p>
       </div>
       <div class="col-12">
-        <p><i class="fa-brands fa-github"></i>{{github}}</p>
+        <p><i class="fa-brands fa-github"></i>&nbsp;&nbsp;{{github}}</p>
       </div>
       <div class="col-12">
-        <p><i class="fa-brands fa-chrome"></i>{{blog}}</p>
+        <p><i class="fa-brands fa-chrome"></i>&nbsp;&nbsp;{{blog}}</p>
       </div>
       <div class="col-12">
-        <p><i class="fa-regular fa-newspaper"></i>{{mbti}}</p>
+        <p><i class="fa-regular fa-newspaper"></i>&nbsp;&nbsp;{{mbti}}</p>
       </div>
-      <div class="col-12">
-        <p>
-          <i class="fa-brands fa-instagram"></i>instagram 정보는 여기로
-          불러주시면 됩니다.
-        </p>
-      </div>
-      <div class="col-12">
-        <p>
-          <i class="fa-sharp fa-solid fa-pen-to-square"></i>한 줄 소개 정보는
-          여기로 불러주시면 됩니다.
-        </p>
-      </div>
+
     </div>
     <!-- 본인 프로필 영역 끝 -->
     <hr
