--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>너! 내 동료가 되라!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <link rel="icon" href="/static/images/favicon.png">
   <style>
     * {
       box-sizing: border-box;
@@ -204,15 +205,15 @@
   </div>
   <div class="cards">
     <div id="profile-box" class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
+      <!-- <div class="col">  // 처음 로드되는 화면에 뜨지 않도록 주석처리함
         <div class="card">
-          <img src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png" class="card-img-top" alt="..." />
+          <img src="#" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">test</h5>
-            <p class="card-text">test</p>
-            <p class="card-text">test</p>
-            <p class="card-text">test</p>
-            <p class="card-text">test</p>
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <p class="card-text"></p>
+            <p class="card-text"></p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -239,7 +240,7 @@
             <p class="card-text">test</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </body>
