프로필 등록시 이름, 직무, 이메일 필수값으로 입력받도록 수정

--- a/templates/register.html
+++ b/templates/register.html
@@ -130,6 +130,24 @@
       let MBTI = $('#MBTI').val()
       let image = base64
 
+      if (name == "") {
+        alert("이름을 입력해주세요.");
+        name.focus();
+        return false;
+      }
+
+      if (field == "field...") {
+        alert("직무를 선택해주세요");
+        return false;
+      }
+
+      if (email == "") {
+        alert("이메일을 입력해주세요");
+        field.focus();
+        return false;
+      }
+
+
       const response = await fetch("/profile", {
         method: "POST",
         headers: {
@@ -151,6 +169,10 @@
         alert(data['msg'])
         window.location.href = '/'
       });
+
+    function isEmpty() {
+
+    }
 
     }
   </script>
