--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
   <title>회원가입</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <link rel="icon" href="/static/images/favicon.png">
+  <link rel="icon" href="/static/images/favicon.png">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
@@ -56,6 +56,7 @@
         success: function (response) {
           if (response["result"] == "success") {
             alert("회원가입이 완료되었습니다.");
+            $.cookie("mytoken", response["token"]);
             window.location.href = "/";
           } else {
             alert("이미 존재하는 회원입니다.");
