--- a/templates/signin.html
+++ b/templates/signin.html
@@ -54,9 +54,22 @@
       }
     </style>
     <script>
-      // {% if msg %}
-      // alert("{{ msg }}")
-      // {% endif %} 왜 있는지 모르는 부분입니다. 검색해봐야 할 것 같아요.
+      $(document).ready(function () {
+        valid().then((response) => {
+
+          if (response['result']['id'] != undefined){ //로그인 유저는 홈으로 이동
+            window.location.href = '/'
+          }
+        });
+      });
+
+      function valid() {
+        return fetch("/valid")
+          .then((res) => res.json())
+          .then((data) => {
+            return data;
+          });
+      }
 
       // ['쿠키'라는 개념에 대해 알아봅시다]
       // 로그인을 구현하면, 반드시 쿠키라는 개념을 사용합니다.
