블로그 새 창에서 띄우기

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
                               <div class="card-body">
                                 <h5 class="card-title" style="text-align:center; font-size:1.875rem">${name}</h5>
                                 <p class="card-text">직무 : ${field}</p>
-                                <a class="card-text" href="${blog}">블로그 : ${blog}</a>
+                                <a class="card-text" href="${blog}" target="_blank" rel="noopener noreferrer">블로그 : ${blog}</a>
                                 <p class="card-text">mbti : ${mbti}</p>
                               </div>
                             </div>
@@ -152,7 +152,7 @@
                               <div class="card-body">
                                 <h5 class="card-title" style="text-align:center; font-size:1.875rem">${name}</h5>
                                 <p class="card-text">직무 : ${field}</p>
-                                <a class="card-text" href="${blog}">블로그 : ${blog}</a>
+                                <a class="card-text" href="${blog}" target="_blank" rel="noopener noreferrer">블로그 : ${blog}</a>
                                 <p class="card-text">mbti : ${mbti}</p>
                               </div>
                             </div>
