--- a/templates/revise.html
+++ b/templates/revise.html
@@ -126,6 +126,7 @@
       let email = $('#email').val()
       let MBTI = $("#MBTI").val()
       let image = base64
+      const emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
  
       if (field == null) {
         field = field_value
@@ -133,6 +134,28 @@
 
       if (MBTI == null) {
         MBTI = mbti_value
+      }
+
+      if (name == "") {
+        alert("이름을 입력해주세요.");
+        name.focus();
+        return false;
+      }
+
+      if (field == "field...") {
+        alert("직무를 선택해주세요");
+        return false;
+      }
+
+      if (email == "") {
+        alert("이메일을 입력해주세요");
+        field.focus();
+        return false;
+      }
+      if (!emailPattern.test(email)){
+        alert("이메일 형식이 올바르지 않습니다.");
+        field.focus();
+        return false;
       }
 
       const response = await fetch("/profile/<userId>/update", {
