--- a/templates/detail.html
+++ b/templates/detail.html
@@ -164,7 +164,10 @@
       let profile_Id = document.location.href.split("/")[4];
       $(document).ready(function () {
         valid().then((response) => {
-          writer_Id = response["result"]["id"];
+          if (response['result']['id'] == undefined){ //비로그인 유저는 접속 불가
+            alert('로그인 후 이용 부탁드립니다.')
+            window.location.href = '/'
+          }
 
           writer_Id == profile_Id
             ? $("#editProfile").css("display", "block")
