--- a/templates/detail.html
+++ b/templates/detail.html
@@ -168,7 +168,7 @@
             alert('로그인 후 이용 부탁드립니다.')
             window.location.href = '/'
           }
-
+          writer_Id = response["result"]["id"];
           writer_Id == profile_Id
             ? $("#editProfile").css("display", "block")
             : $("#editProfile").css("display", "none");
