--- a/templates/detail.html
+++ b/templates/detail.html
@@ -164,17 +164,22 @@
       let profile_Id = document.location.href.split("/")[4];
       $(document).ready(function () {
         valid().then((response) => {
-          if (response['result']['id'] == undefined){ //비로그인 유저는 접속 불가
+
+          writer_Id = response["result"]["id"];
+          if (writer_Id == undefined){ //비로그인 유저는 접속 불가
             alert('로그인 후 이용 부탁드립니다.')
             window.location.href = '/'
+          } else { //로그인 유저 프로필 여부 체크
+            profile_check(writer_Id)
           }
-          writer_Id = response["result"]["id"];
+
           writer_Id == profile_Id
             ? $("#editProfile").css("display", "block")
             : $("#editProfile").css("display", "none");
- 
         });
+
         show_comments();
+
       });
 
       function valid() {
@@ -183,6 +188,23 @@
           .then((data) => {
             return data;
           });
+      }
+
+      function profile_check(userId) {
+        let userURL = '/profile/' + userId
+        $.ajax({
+          type: "GET",
+          url: "/profileCheck",
+          data: {
+            userId: userId
+          },
+          success: function (response) {
+            if (response['result'] == null) { //프로필 미보유자는 home 으로 이동
+              alert('프로필 등록 후 이용이 가능합니다.')
+              window.location.href = '/profile'
+            }
+          }
+        });
       }
 
       function delete_profile() {
@@ -199,12 +221,6 @@
         });
       }
 
-      // function profile() {
-      //     fetch("/profile/<userId>").then((res) => res.json()).then((data) => {
-      //         let rows = data['result']
-      //         console.log(rows)
-      //     });
-      // }
       function logOutHandler() {
         document.cookie =
           "mytoken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
