--- a/templates/detail.html
+++ b/templates/detail.html
@@ -444,7 +444,7 @@
           <div class="col-12" style="width: 95%; margin: 0 auto">
             <div class="row">
               <div class="col-2 userImgArea">
-                <img src="${writerImage}" />
+                <img src="" />
               </div>
               <div class="col-10 userNameArea">이름</div>
             </div>
