--- a/templates/detail.html
+++ b/templates/detail.html
@@ -169,10 +169,8 @@
           if (writer_Id == undefined){ //비로그인 유저는 접속 불가
             alert('로그인 후 이용 부탁드립니다.')
             window.location.href = '/'
-          } else { //로그인 유저 프로필 여부 체크
-            profile_check(writer_Id)
-          }
-
+          } 
+          
           writer_Id == profile_Id
             ? $("#editProfile").css("display", "block")
             : $("#editProfile").css("display", "none");
@@ -191,7 +189,7 @@
       }
 
       function profile_check(userId) {
-        let userURL = '/profile/' + userId
+        let is_exist = false
         $.ajax({
           type: "GET",
           url: "/profileCheck",
@@ -199,12 +197,12 @@
             userId: userId
           },
           success: function (response) {
-            if (response['result'] == null) { //프로필 미보유자는 home 으로 이동
-              alert('프로필 등록 후 이용이 가능합니다.')
-              window.location.href = '/profile'
+            if (response['result'] != null) {
+              is_exist = true;
             }
           }
         });
+        return is_exist;
       }
 
       function delete_profile() {
@@ -228,6 +226,10 @@
       }
 
       function commentWrite() {
+        if (!profile_check(writer_Id)) {
+          alert('프로필 등록 후 이용가능합니다.')
+          return;
+        }
         let profileId = $("#recipient-name").val();
         let writerId = writer_Id;
         let commentText = $("#message-text").val();
